tooling/nargo_cli/tests/snapshots/execution_success/regression_9439/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main(n: u32) {
    let num1: &mut Field = &mut 0_Field;
    let mut slice: [&mut Field] = &[];
    for _ in 0_u32..n {
        slice = slice.push_back(num1);
    }
    *(slice[0_u32]) = 9_Field;
    assert(*slice[0_u32] == 9_Field);
    assert(*num1 == 9_Field);
}
